<resources>
    <string name="app_name">EnglishDict</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_password_confirm">Confirm your password</string>
    <string name="login_with_google">Login with google</string>
    <string name="already_had_an_account">Already have an account?</string>
    <string name="reset_pass">Forgot your password?</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="bottom_navigation_settings">Settings</string>
    <string name="learn">Learn</string>
    <string name="progress">Review</string>
    <string name="start_learning_text">Cool! let\'s take a quiz</string>
    <string name="go_ahead">Go ahead</string>
    <string name="use_timer">use Timer</string>
</resources>
